# gpu-auto-optimizer

./: .gitignore  README.md  gpu_optimizer.py  install.bat  installer.py  requirements.txt  run_balanced.bat  run_monitor.bat  run_performance.bat  run_reset.bat  run_safe.bat  run_with_log.bat  run_with_log.py  setup.bat  start.bat  verify_settings.py
.superpowers/sdd/: progress.md
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  build.ps1
cpp/src/core/: ab_profile.cpp  ab_profile.hpp  undervolt.cpp  undervolt.hpp  version.cpp  version.hpp  vfcurve.cpp  vfcurve.hpp  vfcurve_codec.cpp  vfcurve_codec.hpp
cpp/src/hw/: afterburner.cpp  afterburner.hpp  nvml.cpp  nvml.hpp
cpp/src/tools/: abctl_spike_main.cpp  nvml_probe_main.cpp
cpp/tests/: test_ab_profile.cpp  test_smoke.cpp  test_undervolt.cpp  test_vfcurve.cpp  test_vfcurve_codec.cpp
docs/superpowers/plans/: 2026-03-25-gpu-optimizer-rewrite.md  2026-03-29-code-review-fixes.md  2026-03-29-vf-curve-undervolting.md  2026-06-29-phase1-afterburner-control-spike.md
docs/superpowers/specs/: 2026-03-29-vf-curve-undervolting-design.md  2026-06-29-cpp-afterburner-rewrite-design.md
src/: boot_apply.py  config.py  detector.py  logging_config.py  monitor.py  optimizer.py  scheduler.py  search_journal.py  stability.py  tray.py  ui.py
src/backends/: afterburner.py  amd.py  base.py  nvapi.py  nvapi_vfcurve.py  nvidia_smi.py
src/gui/: app.py  dashboard.py  optimization.py  results.py  settings_screen.py  theme.py  widgets.py
tests/: conftest.py  test_backend_selection.py  test_boot_apply.py  test_config.py  test_core_offset_verify.py  test_logging_config.py  test_monitor.py  test_monitor_nvml_recovery.py  test_nvapi.py  test_optimizer.py  test_optimizer_freeze_safety.py  test_results_selection.py  test_scheduler.py  test_search_journal.py  test_stability.py  test_vfcurve.py  test_vfcurve_reshape.py
